--- a/ComposeBasics1/app/src/main/res/values/strings.xml
+++ b/ComposeBasics1/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">ComposeBasics1</string>
+    <string name="action_show_less">Show less</string>
+    <string name="action_show_more">Show more</string>
+    <string name="action_continue">Continue</string>
 </resources>
